--- a/.env
+++ b/.env
@@ -69,3 +69,7 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
+
+; deploy用
+WWWUSER=1000  # ホストユーザーのUID（User ID）
+WWWGROUP=1000 # ホストユーザーのGID（Group ID）
