控除roleで選択項目変える、name削除、Tax調整中

--- a/.env
+++ b/.env
@@ -73,3 +73,6 @@ MEILISEARCH_NO_ANALYTICS=false
 
 WWWUSER=1000  # ホストユーザーのUID（User ID）
 WWWGROUP=1000 # ホストユーザーのGID（Group ID）
+
+SAIL_XDEBUG_MODE=develop,debug,
+SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
